Fix navbar spacing.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -152,8 +152,3 @@ hr {
 	/* added line to stop words getting smushed together (as they go onto seperate lines and some screen readers do not understand line feeds as a space */
 	white-space: nowrap;
 }
-
-/* Custom Styles */
-.logo {
-   color: var(--accent);
-}
